--- a/src/llm/config/llm_config.yaml
+++ b/src/llm/config/llm_config.yaml
@@ -1,7 +1,7 @@
 # LLM配置
 deepseek:
   provider: "deepseek"
-  api_key: "${DEEPSEEK_API_KEY}"  # 从环境变量读取
+  api_key: "sk-7d246719b6c34befb7ebf10baa75501e"  # 从环境变量读取
   base_url: "https://api.deepseek.com/v1"
   model: "deepseek-chat"
   max_tokens: 2000
