--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,6 @@ data/chroma_db/acb057e3-a45e-4747-911a-79948b7d60bf/index_metadata.pickle
 data/chroma_db/acb057e3-a45e-4747-911a-79948b7d60bf/length.bin
 .gitignore
 data/chroma_db/acb057e3-a45e-4747-911a-79948b7d60bf/link_lists.bin
-
+data/chroma_db
+__pycache__/config.cpython-313.pyc
+__pycache__/config.cpython-313.pyc
